===================================
Maxwell Changelog
===================================

Version 1.0.1
-----------------------------------
[updated] flexlider to version 2.6.0

Version 1.0
-----------------------------------
Initial Release