@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/maxwell/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Maxwell is a minimalistic and elegant WordPress theme featuring an ultra clean magazine layout. With a beautiful typography, various post layouts and a gorgeous featured posts slideshow Maxwell truly helps you to stand out.  
-Version: 1.0
+Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: maxwell
@@ -649,10 +649,17 @@ textarea {
 	font-family: 'Amaranth', sans-serif;
 	font-size: 44px;
 	font-size: 2.75rem;
+	font-weight: bold;
 	text-decoration: none;
 }
 
-.site-branding a:hover .site-title {
+.site-title a:link, 
+.site-title a:visited {
+	color: #303030;
+}
+
+.site-title a:hover,
+.site-title a:active {
 	text-decoration: underline;
 }
 
